# Micro-Vector-Editor

./: CMakeLists.txt  Canvas.h  FreeHand.cpp  Hexagon.cpp  Objects.h  README.md  Rectangle.cpp  mainwindow.h  mouseMoveEvent.cpp  mousePressEvent.cpp  redo.cpp  setupToolBar.cpp  svgparser.cpp  svgparser.h  toInt.cpp  toInt.h
include/: Circle.h  FreeHand.h  Hexagon.h  Line.h  Rectangle.h  Text.h  getAttributeValue.h  roundedrectangle.h
src/: Canvas.cpp  Circle.cpp  Line.cpp  Objects.cpp  Text.cpp  getAttributeValue.cpp  mainwindow.cpp  mouseReleaseEvent.cpp  roundedrectangle.cpp  setupMenus.cpp  undo.cpp
